// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthComponent 1`] = `
<div>
  <header
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="logo.png"
    />
    <h1
      className="App-title"
    >
      Lumi
    </h1>
  </header>
  <FirebaseAuth
    firebaseAuth={undefined}
    uiConfig={Object {}}
  />
</div>
`;

exports[`BootstrapStyleComponent 1`] = `
<link
  crossOrigin="anonymous"
  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
  rel="stylesheet"
/>
`;

exports[`CareProfileComponent 1`] = `null`;

exports[`CareProfileInfoBasicComponent 1`] = `
<div
  className="care-profile-info-container"
>
  <div>
    <b>
      First Name
    </b>
    <div>
      
      <br />
      <br />
    </div>
  </div>
  <div>
    <b>
      Last Name
    </b>
    <div>
      
      <br />
      <br />
    </div>
  </div>
  <div>
    <b>
      Birthday
    </b>
    <div>
      
      <br />
      <br />
    </div>
  </div>
  <div>
    <b>
      Gender
    </b>
    <div>
      
      <br />
      <br />
    </div>
  </div>
  <div>
    <b>
      Email
    </b>
    <div>
      
      <br />
      <br />
    </div>
  </div>
  <div>
    <b>
      Address
    </b>
    <div>
      
      <br />
      <br />
    </div>
  </div>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    disabled={false}
    onClick={[Function]}
  >
    <Glyphicon
      bsClass="glyphicon"
      className="button-icon"
      glyph="pencil"
    />
    Edit
  </Button>
</div>
`;

exports[`CareProfileInfoCareComponent 1`] = `
<div
  className="care-profile-info-container"
>
  <div>
    <b>
      Needs and Preferences
    </b>
    <div>
      
      <br />
      <br />
    </div>
  </div>
  <div>
    <b>
      Things that Delight
    </b>
    <div>
      
      <br />
      <br />
    </div>
  </div>
  <div>
    <b>
      Places of Interest
    </b>
    <div>
      
      <br />
      <br />
    </div>
  </div>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    disabled={false}
    onClick={[Function]}
  >
    <Glyphicon
      bsClass="glyphicon"
      className="button-icon"
      glyph="pencil"
    />
    Edit
  </Button>
</div>
`;

exports[`CareProfileInfoMedicalComponent 1`] = `
<div
  className="care-profile-info-container"
>
  <div>
    <b>
      Type of Dementia
    </b>
    <FormGroup
      bsClass="form-group"
      controlId="typeOfDementia"
      validationState={null}
    >
      <FormControl
        bsClass="form-control"
        componentClass="select"
        onChange={undefined}
        placeholder="Select type of dementia"
        value=""
      >
        <option
          value="unspecified"
        >
          Unspecified
        </option>
        <option
          value="alzheimers"
        >
          Alzheimer's disease
        </option>
        <option
          value="vascular"
        >
          Vascular dementia
        </option>
        <option
          value="lewy"
        >
          Dementia with Lewy bodies
        </option>
        <option
          value="frontotemporal"
        >
          Frontotemporal dementia
        </option>
        <option
          value="creutzfeldt-jakob"
        >
          Creutzfeldt-Jakob disease
        </option>
        <option
          value="wernicke-korsakoff"
        >
          Wernicke-Korsakoff syndrome
        </option>
        <option
          value="mixed"
        >
          Mixed dementia
        </option>
        <option
          value="other"
        >
          Other
        </option>
        <option
          value="unknown"
        >
          Unknown
        </option>
      </FormControl>
    </FormGroup>
  </div>
  <div>
    <b>
      Date of Diagnosis
    </b>
    <FormGroup
      bsClass="form-group"
      controlId="dateOfDiagnosis"
      validationState={null}
    >
      <DatePicker
        autoComplete="on"
        autoFocus={false}
        calendarPlacement="bottom"
        cellPadding="5px"
        clearButtonElement="×"
        dateFormat="MM/DD/YYYY"
        dayLabels={
          Array [
            "Sun",
            "Mon",
            "Tue",
            "Wed",
            "Thu",
            "Fri",
            "Sat",
          ]
        }
        disabled={false}
        id="dateOfDiagnosis"
        instanceCount={0}
        monthLabels={
          Array [
            "January",
            "February",
            "March",
            "April",
            "May",
            "June",
            "July",
            "August",
            "September",
            "October",
            "November",
            "December",
          ]
        }
        nextButtonElement=">"
        noValidate={false}
        onChange={undefined}
        previousButtonElement="<"
        roundedCorners={false}
        showClearButton={true}
        showTodayButton={false}
        showWeeks={false}
        style={
          Object {
            "width": "100%",
          }
        }
        todayButtonLabel="Today"
        value=""
      />
    </FormGroup>
  </div>
  <div>
    <b>
      Medications
    </b>
    <FormGroup
      bsClass="form-group"
      controlId="medications"
      validationState={null}
    >
      <FormControl
        bsClass="form-control"
        componentClass="textarea"
        onChange={undefined}
        placeholder="Enter medications"
        value=""
      />
    </FormGroup>
  </div>
  <div>
    <b>
      Providers
    </b>
    <FormGroup
      bsClass="form-group"
      controlId="providers"
      validationState={null}
    >
      <FormControl
        bsClass="form-control"
        componentClass="textarea"
        onChange={undefined}
        placeholder="Enter providers"
        value=""
      />
    </FormGroup>
  </div>
  <ButtonToolbar
    bsClass="btn-toolbar"
  >
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      disabled={false}
      onClick={[Function]}
    >
      Save
    </Button>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      disabled={false}
      onClick={[Function]}
    >
      Cancel
    </Button>
  </ButtonToolbar>
</div>
`;

exports[`CareProfileNewMemberComponent 1`] = `
<div
  className="sc-bdVaJa djJVkl"
>
  <h2>
    Please share details about the new member :)
  </h2>
  <table
    className="table"
  >
    <tbody>
      <tr>
        <td>
          First Name
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Last Name
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Birthday
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Gender
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Email
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Address
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Type of Dementia
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Date of Diagnosis
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Medications
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Providers
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Needs and Preferences
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Things that Delight
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Places of Interest
        </td>
        <td>
          <div />
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="sc-bdVaJa cXgeQK"
  >
    <div
      className="btn-toolbar"
      role="toolbar"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Save
      </button>
      <button
        className="btn btn-default"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`CareProfileNewMemberFormFieldComponent 1`] = `
<tr>
  <td>
    
  </td>
  <td>
    <div />
  </td>
</tr>
`;

exports[`CareProfileSelectCareRecipientComponent 1`] = `
<div
  className="sc-bdVaJa hgkmdP"
>
  <h2>
    Welcome to CareProfile! Please choose a care recipient:
  </h2>
  <div
    className="form-group"
  >
    <select
      className="form-control"
      id="userList"
      onChange={[Function]}
      placeholder="Select a care recipient"
      type={undefined}
      value=""
    />
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Select
  </button>
</div>
`;

exports[`GroupAddComponent 1`] = `null`;

exports[`GroupAddCreateComponent 1`] = `
<div>
  <h3>
    Create Care Circle
  </h3>
  <div
    className="form-group has-feedback"
  >
    <label
      className="control-label"
      htmlFor="formGroupNewGroupFirstName"
    >
      Whom are you caring for?
    </label>
    <input
      className="form-control"
      id="formGroupNewGroupFirstName"
      onChange={[Function]}
      placeholder="Care recipient first name"
      type="text"
      value=""
    />
  </div>
  <div
    className="form-group has-feedback"
  >
    <input
      className="form-control"
      id="formGroupNewGroupLastName"
      onChange={[Function]}
      placeholder="Care recipient last name"
      type="text"
      value=""
    />
    <span
      className="help-block"
    >
      Lumi will generate a Circle ID to share with family and friends on the next page
    </span>
  </div>
  <button
    className="button-primary btn btn-lg btn-default btn-block"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Create Care Circle
  </button>
  <br />
  <button
    className="button-default btn btn-sm btn-default btn-block"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Back
  </button>
</div>
`;

exports[`GroupAddJoinComponent 1`] = `
<div>
  <h3>
    Join Existing Circle
  </h3>
  <div
    className="form-group has-feedback"
  >
    <label
      className="control-label"
      htmlFor="formGroupJoinGroup"
    >
      Join an existing Lumi Care Circle
    </label>
    <input
      className="form-control"
      id="formGroupJoinGroup"
      onChange={[Function]}
      placeholder="Lumi Circle ID"
      type="text"
      value=""
    />
    <span
      className="help-block"
    >
      This ID must be a valid ID of an existing Lumi Circle
    </span>
  </div>
  <button
    className="button-primary btn btn-lg btn-default btn-block"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Join Care Circle
  </button>
  <br />
  <button
    className="button-default btn btn-sm btn-default btn-block"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Back
  </button>
</div>
`;

exports[`HomeComponent 1`] = `null`;

exports[`NavBottomComponent 1`] = `
<nav
  className="nav-bottom navbar navbar-default navbar-fixed-bottom"
>
  <div
    className="container"
  >
    <div
      className="sc-bdVaJa cNkfwA"
    >
      <ul
        className="nav navbar-nav"
        role={null}
      >
        <li
          className="nav-bottom-item"
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            <div
              className="sc-bdVaJa djJVkl"
            >
              <svg
                fill="currentColor"
                height={24}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "color": undefined,
                    "verticalAlign": "middle",
                  }
                }
                viewBox="0 0 40 40"
                width={24}
              >
                <g>
                  <path
                    d="m16.6 33.4h-8.2v-13.4h-5l16.6-15 16.6 15h-5v13.4h-8.2v-10h-6.8v10z"
                  />
                </g>
              </svg>
              <div
                className="nav-bottom-text"
              >
                Timeline
              </div>
            </div>
          </a>
        </li>
        <li
          className="nav-bottom-item"
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            <div
              className="sc-bdVaJa djJVkl"
            >
              <svg
                fill="currentColor"
                height={24}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "color": undefined,
                    "verticalAlign": "middle",
                  }
                }
                viewBox="0 0 40 40"
                width={24}
              >
                <g>
                  <path
                    d="m31.6 21.6h-10v10h-3.2v-10h-10v-3.2h10v-10h3.2v10h10v3.2z"
                  />
                </g>
              </svg>
              <div
                className="nav-bottom-text"
              >
                Add
              </div>
            </div>
          </a>
        </li>
        <li
          className="nav-bottom-item"
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            <div
              className="sc-bdVaJa djJVkl"
            >
              <svg
                fill="currentColor"
                height={24}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "color": undefined,
                    "verticalAlign": "middle",
                  }
                }
                viewBox="0 0 40 40"
                width={24}
              >
                <g>
                  <path
                    d="m15 8.4h20v6.6h-20v-6.6z m0 23.2v-6.6h20v6.6h-20z m0-8.2v-6.8h20v6.8h-20z m-8.4-8.4v-6.6h6.8v6.6h-6.8z m0 16.6v-6.6h6.8v6.6h-6.8z m0-8.2v-6.8h6.8v6.8h-6.8z"
                  />
                </g>
              </svg>
              <div
                className="nav-bottom-text"
              >
                Summary
              </div>
            </div>
          </a>
        </li>
        <li
          className="nav-bottom-item"
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            <div
              className="sc-bdVaJa djJVkl"
            >
              <svg
                fill="currentColor"
                height={24}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "color": undefined,
                    "verticalAlign": "middle",
                  }
                }
                viewBox="0 0 40 40"
                width={24}
              >
                <g>
                  <path
                    d="m20 23.4c4.5 0 13.4 2.1 13.4 6.6v3.4h-26.8v-3.4c0-4.5 8.9-6.6 13.4-6.6z m0-3.4c-3.7 0-6.6-3-6.6-6.6s2.9-6.8 6.6-6.8 6.6 3.1 6.6 6.8-2.9 6.6-6.6 6.6z"
                  />
                </g>
              </svg>
              <div
                className="nav-bottom-text"
              >
                Profile
              </div>
            </div>
          </a>
        </li>
      </ul>
    </div>
  </div>
</nav>
`;

exports[`NavTopComponent 1`] = `
<div
  className="nav-top"
>
  <nav
    className="navbar navbar-default navbar-fixed-top"
  >
    <div
      className="container"
    >
      <div
        className="navbar-header"
      >
        <a
          className="navbar-brand"
          href="/"
        >
          <div
            className="button-text-accent"
          >
            <b>
              Lumi
            </b>
          </div>
        </a>
        <button
          className="navbar-toggle collapsed"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Toggle navigation
          </span>
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
        </button>
      </div>
      <div
        aria-expanded={null}
        className="navbar-collapse collapse"
      >
        <ul
          className="nav navbar-nav navbar-right"
          role={null}
        >
          <li
            className=""
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
            />
          </li>
          <li
            className=""
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              Sign Out
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`RootComponent 1`] = `null`;

exports[`TimelineComponent 1`] = `null`;

exports[`TimelineStoryContentComponent 1`] = `
<Styled(Component)
  alignItems="flex-start"
  display="flex"
  element="div"
  flexDirection="column"
>
  <div
    className="timeline-story-padding"
  />
  <Image
    bsClass="img"
    circle={false}
    className="timeline-story-width-content timeline-story-height-content-image"
    responsive={true}
    rounded={false}
    src=""
    thumbnail={false}
  />
</Styled(Component)>
`;

exports[`TimelineStoryFooterComponent 1`] = `
<Styled(Component)
  alignItems="center"
  className="timeline-story-padding timeline-story-width-content"
  display="flex"
  element="div"
  justifyContent="space-between"
>
  <Styled(Component)
    display="flex"
    element="div"
  >
    <div
      className="timeline-story-footer-category"
    />
  </Styled(Component)>
  <Styled(Component)
    alignItems="center"
    className="timeline-story-footer-profile"
    display="flex"
    element="div"
  >
    <Image
      bsClass="img"
      circle={true}
      className="timeline-story-footer-profile-image"
      responsive={false}
      rounded={false}
      src={undefined}
      thumbnail={false}
    />
    <span
      className="space-horizontal"
    />
    <div>
      undefined undefined
    </div>
  </Styled(Component)>
</Styled(Component)>
`;

exports[`TimelineStoryHeaderComponent 1`] = `
<div
  className="timeline-story-padding timeline-story-padding-header"
>
  <h4 />
</div>
`;
